--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,8 @@
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: floralwhite;
   font-weight: bold;
-  width: 60rem;
+  width: 100%;
+  max-width: 500px;
   text-align: center;
   margin: auto, auto, auto;
   margin-top: 1rem;
@@ -43,13 +44,15 @@ h1 {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: floralwhite;
   font-weight: bold;
-  width: 60rem;
+  width: 100%;
+  max-width: 700px;
   text-align: center;
 }
 
 .CoolText {
   margin: auto auto 3rem;
-  width: 60rem;
+  width: 100%;
+  max-width: 700px;
   text-align: center;
 }
 
@@ -57,16 +60,21 @@ h1 {
   font-weight: 600;
   font-size: 1rem;
   margin-top: 1rem;
+  width: 100%;
+  max-width: 700px;
 }
 
 .answer {
-  width: 60rem;
+  width: 100%;
+  max-width: 700px;
   text-align: center;
 }
 
 .answerbox {
   margin: auto auto 2rem;
   text-align: center;
+  width: 100%;
+  max-width: 700px;
 }
 
 .blackText {
@@ -76,13 +84,15 @@ h1 {
 
 .vote {
   margin: auto, auto, 2rem;
-  width: 60rem;
+  width: 100%;
+  max-width: 700px;
   text-align: center;
 }
 
 .validate {
   margin: auto, auto, 2rem;
-  width: 50rem;
+  width: 100%;
+  max-width: 700px;
   text-align: center;
 }
 
@@ -91,6 +101,8 @@ h1 {
   overflow:scroll;
   -webkit-overflow-scrolling: touch;
   text-align: center;
+  width: 100%;
+  max-width: 700px;;
 }
 
 #listt {
