--- a/src/App.css
+++ b/src/App.css
@@ -89,6 +89,17 @@ h1 {
   text-align: center;
 }
 
+.steps {
+  margin-left: -5rem;
+}
+
+.nvg {
+  color:rgb(176, 242, 253);
+  text-align: center;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-weight: 500;
+}
+
 .validate {
   margin: auto, auto, 2rem;
   width: 100%;
