--- a/src/App.css
+++ b/src/App.css
@@ -90,13 +90,18 @@ h1 {
 }
 
 .steps {
-  margin-left: -5rem;
   width: 100%;
-  margin-bottom: 1.5rem;
+  max-width: 700px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 25%;
 }
 
 .nvg {
   color:rgb(176, 242, 253);
+  width: 100%;
+  max-width: 700px;
   text-align: center;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-weight: 500;
